--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,44 +1,31 @@
 version: "3"
 
 services:
+  zookeeper:
+    image: wurstmeister/zookeeper:latest
+    container_name: zookeeper
+    ports:
+      - "2181:2181"
+    restart: unless-stopped
+
   kafka:
-    image: bitnami/kafka:3.7
+    image: wurstmeister/kafka:latest
     container_name: kafka
-    hostname: kafka
     ports:
       - "9092:9092"
     environment:
-      # KRaft mode (no Zookeeper)
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_CFG_PROCESS_ROLES=broker,controller
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
-      
-      # Listeners
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://KAFKA_VM_IP:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      
-      # Auto-create topics
-      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
-      
-      # Storage
-      - KAFKA_CFG_LOG_DIRS=/bitnami/kafka/data
-      - ALLOW_PLAINTEXT_LISTENER=yes
-      
-      # Retention (keep logs for 7 days)
-      - KAFKA_CFG_LOG_RETENTION_HOURS=168
-      - KAFKA_CFG_LOG_SEGMENT_BYTES=1073741824
-      
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://KAFKA_VM_IP:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+      KAFKA_LOG_RETENTION_HOURS: 168
+      KAFKA_LOG_SEGMENT_BYTES: 1073741824
     volumes:
-      - kafka_data:/bitnami/kafka
+      - /var/run/docker.sock:/var/run/docker.sock
+      - kafka_data:/kafka
+    depends_on:
+      - zookeeper
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 40s
 
 volumes:
   kafka_data:
